--- a/ferreteria/src/Clientes/ClientesGUI.form
+++ b/ferreteria/src/Clientes/ClientesGUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="589" height="571"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5130305"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="dc339">
@@ -31,7 +33,9 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5130305"/>
           <font name="JetBrains Mono"/>
+          <foreground color="-16250614"/>
           <text value="ID Cliente:"/>
         </properties>
       </component>
@@ -40,7 +44,9 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5130305"/>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="Nombre:"/>
         </properties>
       </component>
@@ -49,7 +55,9 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5130305"/>
           <font name="JetBrains Mono"/>
+          <foreground color="-16250614"/>
           <text value="Teléfono:"/>
         </properties>
       </component>
@@ -58,7 +66,9 @@
           <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5130305"/>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="Dirección:"/>
         </properties>
       </component>
@@ -67,7 +77,9 @@
           <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-5130305"/>
           <font name="JetBrains Mono"/>
+          <foreground color="-16250614"/>
           <text value="Correo:"/>
         </properties>
       </component>
@@ -119,6 +131,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="c13c1" class="javax.swing.JButton" binding="agregarButton" default-binding="true">
@@ -165,7 +178,7 @@
           <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-8356225"/>
+          <background color="-14614299"/>
           <enabled value="true"/>
           <foreground color="-329479"/>
           <text value="Volver al menú"/>
