--- a/ferreteria/src/Empleados/EmpleadosGUI.form
+++ b/ferreteria/src/Empleados/EmpleadosGUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="33" y="38" width="601" height="546"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5130305"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="84134">
@@ -29,6 +31,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="ID Empleado:"/>
         </properties>
       </component>
@@ -49,6 +52,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16250614"/>
           <text value="Nombre:"/>
         </properties>
       </component>
@@ -68,6 +72,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16250614"/>
           <text value="Cargo:"/>
         </properties>
       </component>
@@ -77,6 +82,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16250614"/>
           <text value="Salario:"/>
         </properties>
       </component>
@@ -140,6 +146,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="22"/>
+          <foreground color="-16250614"/>
           <text value="Empleados"/>
         </properties>
       </component>
@@ -148,7 +155,7 @@
           <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-8356225"/>
+          <background color="-14614299"/>
           <text value="Volver al menú"/>
         </properties>
       </component>
