--- a/ferreteria/src/Inventario/InventarioGUI.form
+++ b/ferreteria/src/Inventario/InventarioGUI.form
@@ -6,7 +6,7 @@
       <xy x="20" y="20" width="761" height="519"/>
     </constraints>
     <properties>
-      <background color="-14605013"/>
+      <background color="-5130305"/>
     </properties>
     <border type="none"/>
     <children>
@@ -87,7 +87,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="24"/>
-          <foreground color="-1"/>
+          <foreground color="-16055278"/>
           <text value="Inventario"/>
         </properties>
       </component>
@@ -104,7 +104,7 @@
           <grid row="14" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-12039347"/>
+          <background color="-14614299"/>
           <font name="JetBrains Mono"/>
           <foreground color="-1"/>
           <text value="Volver al menú"/>
@@ -148,8 +148,9 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16250614"/>
           <font name="JetBrains Mono"/>
-          <foreground color="-1"/>
+          <foreground color="-16250614"/>
           <text value="ID:"/>
         </properties>
       </component>
@@ -158,8 +159,9 @@
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16250614"/>
           <font name="JetBrains Mono"/>
-          <foreground color="-1"/>
+          <foreground color="-16250614"/>
           <text value="Nombre:"/>
         </properties>
       </component>
@@ -168,8 +170,9 @@
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16250614"/>
           <font name="JetBrains Mono"/>
-          <foreground color="-1"/>
+          <foreground color="-16250614"/>
           <text value="Categoría:"/>
         </properties>
       </component>
@@ -178,8 +181,9 @@
           <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16250614"/>
           <font name="JetBrains Mono"/>
-          <foreground color="-1"/>
+          <foreground color="-16250614"/>
           <text value="Precio:"/>
         </properties>
       </component>
@@ -188,8 +192,9 @@
           <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16250614"/>
           <font name="JetBrains Mono"/>
-          <foreground color="-1"/>
+          <foreground color="-16250614"/>
           <text value="Stock:"/>
         </properties>
       </component>
@@ -198,8 +203,9 @@
           <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-16250614"/>
           <font name="JetBrains Mono"/>
-          <foreground color="-1"/>
+          <foreground color="-16250614"/>
           <text value="Proveedor ID:"/>
         </properties>
       </component>
