--- a/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
+++ b/ferreteria/src/Orden_Compras/OrdenesCompraGUI.form
@@ -6,6 +6,7 @@
       <xy x="20" y="20" width="800" height="600"/>
     </constraints>
     <properties>
+      <background color="-5130305"/>
       <preferredSize width="900" height="700"/>
     </properties>
     <border type="none" title="Órdenes de compra" title-justification="2">
@@ -55,7 +56,7 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-11829826"/>
+              <background color="-15840502"/>
               <foreground color="-1"/>
               <text value="Buscar"/>
             </properties>
@@ -65,8 +66,8 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-6968794"/>
-              <foreground color="-1"/>
+              <background color="-15952470"/>
+              <foreground color="-16250614"/>
               <text value="Limpiar Filtros"/>
             </properties>
           </component>
@@ -88,6 +89,7 @@
             <properties>
               <autoCreateRowSorter value="true"/>
               <fillsViewportHeight value="true"/>
+              <gridColor color="-5130305"/>
             </properties>
           </component>
         </children>
@@ -257,8 +259,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-14251784"/>
-                  <foreground color="-1"/>
+                  <background color="-10723483"/>
+                  <foreground color="-16250614"/>
                   <text value="Actualizar Estado"/>
                 </properties>
               </component>
@@ -267,8 +269,8 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <background color="-13401089"/>
-                  <foreground color="-1"/>
+                  <background color="-10723483"/>
+                  <foreground color="-16250614"/>
                   <text value="Generar Factura"/>
                 </properties>
               </component>
@@ -292,6 +294,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14614299"/>
           <text value="Volver al menú"/>
         </properties>
       </component>
