--- a/ferreteria/src/Proveedores/ProveedoresGUI.form
+++ b/ferreteria/src/Proveedores/ProveedoresGUI.form
@@ -6,6 +6,7 @@
       <xy x="20" y="20" width="593" height="566"/>
     </constraints>
     <properties>
+      <background color="-5130305"/>
       <font name="JetBrains Mono"/>
     </properties>
     <border type="none"/>
@@ -16,6 +17,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="ID Proveedor:"/>
         </properties>
       </component>
@@ -36,6 +38,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="Nombre:"/>
         </properties>
       </component>
@@ -56,6 +59,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="Contacto:"/>
         </properties>
       </component>
@@ -76,6 +80,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="Categoría:"/>
         </properties>
       </component>
@@ -85,6 +90,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono"/>
+          <foreground color="-16055278"/>
           <text value="Acciones:"/>
         </properties>
       </component>
@@ -141,6 +147,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="24"/>
+          <foreground color="-16055278"/>
           <text value="Proveedores"/>
         </properties>
       </component>
@@ -165,7 +172,7 @@
           <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-8356225"/>
+          <background color="-14614299"/>
           <text value="Volver al Menú"/>
         </properties>
       </component>
