--- a/ferreteria/src/Reportes/ReportesGUI.form
+++ b/ferreteria/src/Reportes/ReportesGUI.form
@@ -6,6 +6,7 @@
       <xy x="20" y="20" width="956" height="600"/>
     </constraints>
     <properties>
+      <background color="-5130305"/>
       <minimumSize width="800" height="600"/>
       <preferredSize width="800" height="600"/>
     </properties>
@@ -17,6 +18,7 @@
         </constraints>
         <properties>
           <font name="Arial" size="18" style="1"/>
+          <foreground color="-16250614"/>
           <text value="Reportes"/>
         </properties>
       </component>
@@ -144,8 +146,9 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-16220934"/>
+              <background color="-11184297"/>
               <font name="JetBrains Mono"/>
+              <foreground color="-16250614"/>
               <horizontalTextPosition value="0"/>
               <icon value=""/>
               <text value="Generar Reporte"/>
@@ -159,6 +162,7 @@
         </constraints>
         <properties>
           <font name="Arial" size="14" style="1"/>
+          <foreground color="-16055278"/>
           <text value="Resultados:"/>
         </properties>
       </component>
@@ -204,7 +208,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <background color="-16220934"/>
+              <background color="-14614299"/>
               <font name="JetBrains Mono"/>
               <text value="Volver al menú"/>
             </properties>
