--- a/ferreteria/src/Sockets/ClienteGUI.form
+++ b/ferreteria/src/Sockets/ClienteGUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5130305"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="a62f2">
@@ -18,7 +20,9 @@
           <component id="fbb19" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
             <constraints/>
             <properties>
+              <background color="-5130305"/>
               <font name="JetBrains Mono" size="18" style="0"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -36,6 +40,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-14614299"/>
           <font name="JetBrains Mono" size="12" style="0"/>
           <text value="Enviar"/>
         </properties>
@@ -45,6 +50,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-16055278"/>
           <text value="Escribir mensaje:"/>
         </properties>
       </component>
@@ -53,6 +59,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-15840502"/>
           <font name="JetBrains Mono" size="12" style="0"/>
           <text value="Conectar"/>
         </properties>
