--- a/ferreteria/src/Sockets/ServidorGUI.form
+++ b/ferreteria/src/Sockets/ServidorGUI.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5130305"/>
+    </properties>
     <border type="none"/>
     <children>
       <scrollpane id="c99ee">
@@ -18,6 +20,7 @@
           <component id="1dc21" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
             <constraints/>
             <properties>
+              <background color="-5130305"/>
               <font name="JetBrains Mono" size="18" style="0"/>
               <wrapStyleWord value="false"/>
             </properties>
@@ -29,7 +32,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-329479"/>
+          <background color="-15840502"/>
           <font name="JetBrains Mono" size="12" style="0"/>
           <text value="Enviar"/>
         </properties>
@@ -50,6 +53,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono" size="20"/>
+          <foreground color="-16250614"/>
           <text value="Escribe tu mensaje:"/>
         </properties>
       </component>
@@ -58,7 +62,7 @@
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-329479"/>
+          <background color="-11184297"/>
           <font name="JetBrains Mono" size="12" style="0"/>
           <text value="Iniciar servidor"/>
         </properties>
@@ -68,7 +72,7 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-8356225"/>
+          <background color="-14614299"/>
           <text value="Volver al menú"/>
         </properties>
       </component>
